--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <nav>
-      <h1>Pizza Plus</h1>
+      <a href="#"><h1>Pizza Plus</h1></a>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -52,7 +52,7 @@
         <div class="container">
           <h2>About Us</h2>
           <div class="about-container">
-            <img src="/img/about-us.jpg" alt="about us" />
+            <img src="img/about-us.jpg" alt="about us" />
             <p>
               Pizza Plus' culture can be defined in one word: Family. We are a
               family-owned company, but more than that, our team has a “family”
