added form with javascript

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
               family-owned company, but more than that, our team has a “family”
               way of connecting and caring for one another.
             </p>
-          </div>
         </div>
       </div>
       <div id="menu" class="menu">
@@ -111,6 +110,28 @@
           </div>
         </div>
       </div>
+      <div class="form">
+        <h2>Sign Up for Great Deals!</h2>
+        <form>
+          <label for="name">Name:</label><br />
+          <input
+            type="text"
+            id="name"
+            name="name"
+            required
+            placeholder="Name"
+          /><br />
+          <label for="email">Email:</label><br />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            placeholder="Email"
+          /><br />
+          <button type="submit" id="submit">Submit</button>
+        </form>
+    </div>
     </main>
     <footer id="contact">
       <div class="hours">
@@ -128,5 +149,6 @@
         <i class="fab fa-youtube-square"></i>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
