added bold font and changed text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             <p>
               Pizza Plus' culture can be defined in one word: Family. We are a
               family-owned company, but more than that, our team has a “family”
-              way of connecting and caring for one another.
+              way of connecting and caring for one another. The secret to our food is 
+              source fresh, quality ingredients. Prepare dishes 
+              with care and passion. Serve them with a warm smile. 
+              We take pride in what we make and how we share it. 
+              Always the best food, made especially for you.
             </p>
         </div>
       </div>
